
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical">


<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/phone_number_introduction"
    />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:weightSum="1">

    <EditText
        android:id="@+id/phone"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:layout_weight="0.83" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_contact_string"
        android:id="@+id/contactbutton" />
</LinearLayout>

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/messages_description"
    />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_message_field"
            android:layout_weight="0.85" />

        <Button
        android:id="@+id/add_message_button"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:text="@string/add_message" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="318dp">

        <ListView
        android:id="@+id/tablelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_gravity="top">

    </ListView>
    </LinearLayout>

    <Button
    android:id="@+id/exitconfig"
    android:layout_width="fill_parent"
    android:layout_height="76dp"
    android:text="@string/exit_configuration_text"
    />


</LinearLayout>


